[gd_scene load_steps=6 format=3 uid="uid://g1sgt5grtyrm"]

[ext_resource type="PackedScene" path="res://ui/inventory/InventoryContainer.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://o0lia58mrfw6" path="res://ui/desktop/SpellContainer.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dco6xsneqsqxh" path="res://assets/inventory/33.png" id="3"]
[ext_resource type="Theme" path="res://assets/theme.theme" id="4"]
[ext_resource type="Script" path="res://ui/desktop/MainPanel.gd" id="5"]

[node name="MainPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(455, 0)
offset_right = 455.0
offset_bottom = 720.0
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("5")

[node name="MidlePanel" type="TabContainer" parent="."]
layout_mode = 2
theme = ExtResource("4")

[node name="SpellsContainer" parent="MidlePanel" instance=ExtResource("2")]
layout_mode = 2

[node name="InventoryContainer" parent="MidlePanel" instance=ExtResource("1")]
visible = false
layout_mode = 2

[node name="BottomPanel" type="ColorRect" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Vida"

[node name="UserHP" type="ProgressBar" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Mana"

[node name="UserMP" type="ProgressBar" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Energia"

[node name="UserSTA" type="ProgressBar" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UserSed" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Sed:
90"

[node name="UserHam" type="Label" parent="Control/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Hambre:
80"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UserLevel" type="Label" parent="Control/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Nivel: 999"

[node name="UserExperiece" type="Label" parent="Control/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "999999/9999999"
clip_text = true
